--- a/hw01.md
+++ b/hw01.md
@@ -15,4 +15,4 @@ Homework 1
      (or you may use the command line version).
      I would recommend [SourceTree](http://www.sourcetreeapp.com).
      (Ask Google how to use it.)
-   * You may refer to [this exercise](http://quant-econ.net/py/getting_started.html#exercise-2).
+   * You may refer to [this exercise](http://lectures.quantecon.org/py/getting_started.html#exercise-2).
